--- a/project/install_mysql.yml
+++ b/project/install_mysql.yml
@@ -45,7 +45,7 @@
         host={{ item }}
         password={{ mysql_root_password }}
         login_user=root
-        login_password="5375loap"
+        login_password="secret"
         state=present
       with_items:
         - 127.0.0.1
