--- a/project/ping.yaml
+++ b/project/ping.yaml
@@ -1,7 +1,7 @@
 ---
 - name: playbook to check conectivity
   hosts: all
-  gather_facts: no
+  gather_facts: yes
 
   tasks:
       - name: ensure the remote hosts is reachable
@@ -9,4 +9,4 @@
         register: ping_out
 
       - debug:
-          msg: "{{ping_out}}"
+          msg: "{{ansible_facts}}"
