--- a/project/aws_lightsail.yaml
+++ b/project/aws_lightsail.yaml
@@ -1,4 +1,3 @@
----
 - name: playbook to test aws_lightsail module
   hosts: localhost
   gather_facts: no
@@ -7,11 +6,11 @@
     # Create a new Lightsail instance, register the instance details
     - lightsail:
         state: present
-        name: myinstanceWithAnsible
+        name: ubuntu_20_04
         region: eu-west-3
         zone: eu-west-3
-        blueprint_id: ubuntu_16_04
-        bundle_id: nano_1_0
+        blueprint_id: ubuntu_20_04
+        bundle_id: micro_1_1
         key_pair_name: id_rsa
         user_data: " echo 'hello marcelo' > /home/ubuntu/test.txt"
         wait_timeout: 500
